--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "0.9.5",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-form": "^7.3.0",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {},
   "scripts": {
